<resources>
    <string name="app_name">WorkMatch</string>
    <string name="title_home">Inicio</string>
    <string name="title_messages">Mensajes</string>
    <string name="title_profile">Perfil</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_settings">Configuraciones</string>
    <!-- Strings related to login or Register-->
    <string name="promp_name">Nombre</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_register">Registrarse Ahora</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">La dirección de email no es valida</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="label_radio_group">Seleccionar tipo de usuario</string>
    <string name="radio_employee">Profesional</string>
    <string name="radio_employer">Empleador</string>
    <!--  FirebaseAuth  -->
    <string name="default_web_client_id_app">506073534138-fl48bjumhenjrejojier08acpn1rccr6.apps.googleusercontent.com
    </string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="action_settings">Settings</string>
    <!--    Chat        -->
    <string name="label_chat_text">Escribe aquí</string>
    <!--    ActionBar   -->
    <string name="actbar_settings">Configuración</string>
    <string name="actbar_messages">Mensajes</string>
    <!--    Configurations-->
    <string name="edit_profile">Editar perfil</string>
    <string name="my_announces">Mis Anuncios</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="search_jobs_config">Configurar Busqueda de Empleos</string>
    <string name="find_notifies">Encontrar Notificaciones</string>
    <string name="notifies">Notificaciones</string>
    <string name="show_location">Mostrar Ubicación</string>
    <string name="payments">Opciones de Pago</string>
    <string name="close_session">Cerrar Sesión</string>
    <!--    Register-->
    <string name="register_email">Iniciar Sesión con Correo</string>
    <string name="register_google">Iniciar Sesión con Google</string>
    <string name="register_linkdn">Iniciar Sesión con Linkdn</string>
    <!--    Settings - Add Payment-->
    <string name="payment_name">Nombre de Propietario</string>
    <string name="payment_email">E-mail de pago</string>
    <string name="payment_credit_card_number">N° Tarjeta de Crédito</string>
    <string name="payment_cvv">CVV</string>
    <string name="payment_btn">Pagar</string>
    <!--    Edit Profile-->
    <string name="edit_profile_save">Actualizar datos</string>
    <string name="match_list_message">Cargando...</string>

</resources>
