<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        tools:context=".activities.settings.SettingsActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="?actionBarSize"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:orientation="vertical">
        <Button
                android:id="@+id/edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="start|center"
                android:textAllCaps="false"
                android:text="@string/edit_profile"
                android:textColor="@color/common_google_signin_btn_text_dark"
                android:drawableEnd="@drawable/ic_action_keyboard_arrow_right_dark"
                android:background="@color/colorPrimaryDark"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="start|center"
                android:textAllCaps="false"
                android:text="@string/change_password"
                android:textColor="@color/common_google_signin_btn_text_dark"
                android:drawableEnd="@drawable/ic_action_keyboard_arrow_right_dark"
                android:background="@color/colorPrimary"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:gravity="start|center"
                android:textAllCaps="false"
                android:text="@string/search_jobs_config"
                android:textColor="@color/common_google_signin_btn_text_dark"
                android:drawableEnd="@drawable/ic_action_keyboard_arrow_right_dark"
                android:background="@color/colorPrimaryDark"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="start|center"
                android:textAllCaps="false"
                android:text="@string/find_notifies"
                android:textColor="@color/common_google_signin_btn_text_dark"
                android:drawableEnd="@drawable/ic_action_keyboard_arrow_right_dark"
                android:background="@color/colorPrimaryDark"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:gravity="start|center"
                android:textAllCaps="false"
                android:text="@string/notifies"
                android:textColor="@color/common_google_signin_btn_text_dark"
                android:drawableEnd="@drawable/ic_action_keyboard_arrow_right_dark"
                android:background="@color/colorPrimary"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:gravity="start|center"
                android:textAllCaps="false"
                android:text="@string/show_location"
                android:textColor="@color/common_google_signin_btn_text_dark"
                android:drawableEnd="@drawable/ic_action_keyboard_arrow_right_dark"
                android:background="@color/colorPrimary"/>

        <Button
                android:id="@+id/payments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="start|center"
                android:textAllCaps="false"
                android:text="@string/payments"
                android:textColor="@color/common_google_signin_btn_text_dark"
                android:drawableEnd="@drawable/ic_action_keyboard_arrow_right_dark"
                android:background="@color/colorPrimaryDark"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>